Moved the Language config to its own class